{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 65,
  "lineage": "b2df61b5-33cd-747b-5b1d-42d8e23c425c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02660b83a0d8dbaef",
            "arn": "arn:aws:ec2:us-west-2:874590990462:instance/i-02313d9eb4436c48f",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02313d9eb4436c48f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Mykeypair-Ruq",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0890c697de37fd67e",
            "private_dns": "ip-10-10-1-242.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.242",
            "public_ip": "54.149.100.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b338c6d145096603",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-089230d59be7f1801",
            "tags": {
              "Name": "ec2_terra"
            },
            "tags_all": {
              "Name": "ec2_terra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bccac29d3af1b322"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_terra",
            "aws_subnet.vpc_public_terra",
            "aws_vpc.vpc_terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:874590990462:internet-gateway/igw-086c4a43d76950e0f",
            "id": "igw-086c4a43d76950e0f",
            "owner_id": "874590990462",
            "tags": {
              "Name": "igw_terra"
            },
            "tags_all": {
              "Name": "igw_terra"
            },
            "vpc_id": "vpc-0db3473a428a5bcc5"
          },
          "dependencies": [
            "aws_vpc.vpc_terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public_terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:874590990462:route-table/rtb-0c45cf58655cc2766",
            "id": "rtb-0c45cf58655cc2766",
            "owner_id": "874590990462",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-086c4a43d76950e0f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_public_terra"
            },
            "tags_all": {
              "Name": "rt_public_terra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db3473a428a5bcc5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_terra",
            "aws_vpc.vpc_terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_public_terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06243cc114eae397d",
            "route_table_id": "rtb-0c45cf58655cc2766",
            "subnet_id": "subnet-089230d59be7f1801"
          },
          "dependencies": [
            "aws_internet_gateway.igw_terra",
            "aws_route_table.rt_public_terra",
            "aws_subnet.vpc_public_terra",
            "aws_vpc.vpc_terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:874590990462:security-group/sg-0bccac29d3af1b322",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bccac29d3af1b322",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "HTTP and SSH",
            "name_prefix": "",
            "owner_id": "874590990462",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_terra"
            },
            "tags_all": {
              "Name": "sg_terra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db3473a428a5bcc5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_public_terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:874590990462:subnet/subnet-089230d59be7f1801",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089230d59be7f1801",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "874590990462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_public_terra"
            },
            "tags_all": {
              "Name": "vpc_public_terra"
            },
            "vpc_id": "vpc-0db3473a428a5bcc5"
          },
          "dependencies": [
            "aws_vpc.vpc_terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:874590990462:vpc/vpc-0db3473a428a5bcc5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-01c40642e1f3dc84b",
            "default_route_table_id": "rtb-0ecfcc5dfd4e464c5",
            "default_security_group_id": "sg-080de97caa6835604",
            "dhcp_options_id": "dopt-02238e522a78fd4e2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0db3473a428a5bcc5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ecfcc5dfd4e464c5",
            "owner_id": "874590990462",
            "tags": {
              "Name": "vpc_terra"
            },
            "tags_all": {
              "Name": "vpc_terra"
            }
          }
        }
      ]
    }
  ]
}